--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="small-6 columns">
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
-                <div 
-                    class="healthbar text-center" 
+                <div
+                    class="healthbar text-center"
                     style="background-color: green; margin: 0; color: white;"
                     :style="{width: playerHealth + '%'}">
                     {{ playerHealth }}
@@ -23,8 +23,8 @@
         <div class="small-6 columns">
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
-                <div 
-                    class="healthbar text-center" 
+                <div
+                    class="healthbar text-center"
                     style="background-color: green; margin: 0; color: white;"
                     :style="{width: monsterHealth + '%'}">
                     {{ monsterHealth }}
@@ -42,14 +42,15 @@
             <button id="attack" @click="attack">ATTACK</button>
             <button id="special-attack" @click="specialAttack">SPECIAL ATTACK</button>
             <button id="heal" @click="heal">HEAL</button>
-            <button id="give-up" id="give-up">GIVE UP</button>
+            <button id="give-up" @click="giveUp">GIVE UP</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
             <ul>
-                <li>
-
+                <li v-for="turn in turns"
+                  :class="{'player-turn':turn.isPlayer, 'monster-turn': !turn.isPlayer}">
+                  {{ turn.text }}
                 </li>
             </ul>
         </div>
