--- a/Section Code (Start)/index.html
+++ b/Section Code (Start)/index.html
@@ -1,6 +1,11 @@
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
 
-<div id="app">
+<div id="app1">
+  <h1 ref="heading">{{ title }}</h1>
+  <button v-on:click="show">Show Paragraph</button>
+  <p v-if="showParagraph">This is not always visible</p>
+</div>
+<div id="app2">
   <h1 ref="heading">{{ title }}</h1>
   <button v-on:click="show">Show Paragraph</button>
   <p v-if="showParagraph">This is not always visible</p>
