--- a/Section Code (Start)/index.html
+++ b/Section Code (Start)/index.html
@@ -1,12 +1,13 @@
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-
-<div id="app1">
-  <h1 ref="heading">{{ title }}</h1>
-  <button v-on:click="show">Show Paragraph</button>
-  <p v-if="showParagraph">This is not always visible</p>
-</div>
-<div id="app2">
-  <h1 ref="heading">{{ title }}</h1>
-  <button v-on:click="show">Show Paragraph</button>
-  <p v-if="showParagraph">This is not always visible</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Vue Components</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  </head>
+  <body>
+    <div id="app">
+    </div>
+    <script src="/dist/build.js"></script>
+  </body>
+</html>
